# wacki

./: .gitignore  .gitmodules  3DS_PORT_COMPLETE.md  BUILDING.md  BUILD_STATUS.md  FILES_TO_COPY.md  FIX_SUMMARY.md  KOMPLETNE_PLIKI.md  Makefile  PORT_3DS_SUMMARY.md  PUSH_INSTRUCTIONS.md  README.md  READY_TO_PUSH.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: 3ds.yml  TEMP-verify-other-platforms.yml  build.yml  pages.yml  switch.yml
android/: .gitignore  README.md  build.gradle  settings.gradle
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/pl/mszula/wacki/: SetupActivity.java  WackiActivity.java  WackiData.java
android/app/src/main/java/pl/wacki/: SetupActivity.java  WackiActivity.java  WackiData.java
android/app/src/main/res/layout/: activity_setup.xml
android/app/src/main/res/values/: strings.xml
assets/icons/: wacki.icns  wacki.rc
docs/: README.md  architecture.md  glossary.md  per-entity-vm.md  platform-hal.md  save-file.md
include/: entity_offsets.h  wacki.h
include/wacki/: api.h  globals.h  log.h
include/wacki/platform/: android_saf.h  android_touch.h  input.h  storage.h  system.h
itch/: push-release.sh
mk/: 3ds.mk  desktop.mk  miyoo.mk  portmaster.mk  ps2.mk  switch.mk  wii.mk
src/: archive.c  assets.c  audio.c  config.c  data_root.c  depack.c  embedded_icon.c  embedded_wacki_pe_stub.c  flic.c  font.c  game.c  graphics.c  log.c  main.c  pe_loader.c  platform_portmaster.c  platform_ps2.c  platform_sdl.c  platform_switch.c  save.c  stubs.c
src/actor/: intern.c  list.c  render.c  vm.c  walker.c
src/anim/: alpha_blit.c
src/audio/: cutscene.c  mixer_internal.h  music_stream.c  music_stream.h  sfx.c  sound_queue.c
src/flic/: decoder.c
src/hud/: cursor.c  inventory.c  items.c  panel.c
src/menu/: chapter_select.c  main_menu.c  menu_loop.c  options.c  port_attribution.c  slot_picker.c
src/platform/3ds/: 3ds.c  README.md  SDL.h  SDL_compat.c  SDL_compat.h  audio_3ds.c  data_root_3ds.c  embedded_wacki_pe_stub.c  gamepad_3ds.c  platform_3ds.c  storage_3ds.c  system_3ds.c  video_3ds.c
src/platform/android/: data_root_android.c  hooks_android.c  saf.c  touch_overlay.c
src/platform/macos/: macos.m
src/platform/miyoo/: miyoo.c
src/platform/nintendo/: nintendo_gamepad.c
src/platform/ps2/: video_ps2.c
src/platform/sdl/: audio_sdl.c  data_root_desktop.c  file_host.c  flic_host.c  gamepad_sdl.c  pad_layout.c  platform_sdl.c  save_host.c  sdl_internal.h  system_sdl.c  video_sdl.c
src/platform/switch/: data_root_switch.c  embedded_wacki_pe_stub.c  storage_switch.c  switch.c
src/platform/wii/: storage_wii.c
src/scene/: bg_mask.c  dispatch.c  frame_tick.c  hud_paint.c  komnata.c  komnata_scene.c  mask_list.c  navigation.c  play_loop.c  preload.c  scene_input.c  spawn.c  stage.c  walkability.c
src/script_bridge/: entity.c  palette.c
src/text/: balloon.c  dialog.c
src/util/: screenshot.c
src/vm/: main.c  opcodes.h  parser.c
tests/: README.md  test_engine_stubs.c  test_komnata_load.c  test_main.c  test_panel_hit_test.c  test_rng.c  test_sound_queue.c
tools/: build-3ds.sh  build-portmaster.sh  build-ps2-iso.sh  build-ps2-modes.sh  build-ps2.sh  build-switch.sh  build-wii.sh  create_3ds_icon.py  gen-changelog.sh  pack-miyoo.sh  pack-portmaster.sh  ps2-diag.c  ps2-fileio-probe.c  smoke-runner.sh
website/: hugo.toml  index.html  main.js  styles.css
website/content/: eksplorer.md
website/content/platformy/: miyoo.md  ps2.md
website/layouts/: index.html
website/layouts/_default/: eksplorer.html
website/layouts/partials/: head-common.html  nav.html
website/static/: styles.css
